<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"><LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#fdfffb"
    android:layout_weight="1.60"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtLogin"
            android:text="@string/tituloLogin"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/titulo"
            />
        <EditText
            android:id="@+id/UsuarioLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:hint="@string/hintUsuario"
            android:paddingTop="150dp"
            />
        <EditText
            android:id="@+id/ContraseñaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/UsuarioLogin"
            android:inputType="textPassword"
            android:hint="@string/hintContraseña"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/botonLogeo"
            android:layout_below="@id/ContraseñaLogin"
            android:text="@string/btnLogeo"
            android:onClick="logear"
            />
            />
    </RelativeLayout>
</LinearLayout>

</LinearLayout>