<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#fdfffb"
            android:layout_weight="1.60"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPrestamo"
                    android:text="@string/tituloPrestamo"
                    android:textColor="#000000"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/titulo"
                    />
                <Spinner
                    android:id="@+id/objPrestamo"
                    android:layout_width="match_parent"
                    android:layout_below="@id/txtPrestamo"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/hintObjeto"
                    android:paddingTop="50dp"
                    />
                <AutoCompleteTextView
                    android:id="@+id/usuarioPrestamo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/objPrestamo"
                    android:inputType="numberDecimal"
                    android:layout_marginTop="30dp"
                    android:hint="@string/prestamoIdUsuario"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPrestamoTipo"
                    android:layout_below="@id/usuarioPrestamo"
                    android:text="@string/tituloPrestamoTipo"
                    android:textColor="#000000"
                    android:layout_marginTop="30dp"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/textoNormal"
                    />
                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnPrestamoTipo"
                    android:layout_marginLeft="160dp"
                    android:layout_below="@id/txtPrestamoTipo"
                    android:layout_gravity="center"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/botonPrestamo"
                    android:layout_marginTop="80dp"
                    android:layout_below="@id/btnPrestamoTipo"
                    android:text="@string/botonPrestamo"
                    />
            </RelativeLayout>
        </LinearLayout>
</LinearLayout>