<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtDevolucionUsuario"
            android:layout_gravity="center"
            android:text="@string/usuario"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/etDevolucionUsuario"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/txtDevolucionCondicion"
            android:layout_gravity="center"
            android:text="@string/DevolucionCondicion"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/SwitchDevolucionCondicion"
            android:checked="true" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:text="@string/botonDevolucion"
            android:id="@+id/btnDevolucionDevolver"/>

    </LinearLayout>

</LinearLayout>